landing page new updates

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <body>
     <video autoplay muted loop plays-inline id="bgVid">
         <source src="./assets/images/bgVid.mp4" type="video/mp4">
+        <source src="./assets/images/bgVid.mov" type="video/mov">
+        <source src="./assets/images/bgVid.ogv" type="video/ogv">
+        <source src="./assets/images/bgVid.webm" type="video/webm">
+        <source src="./assets/images/bgVid.wmv" type="video/wmv">
     </video>
     <div class="techStrip absolute top-0 left-0 h-full w-5p flexCenter justify-center">
         <h1 class="-rotate-90 whitespace-nowrap tracking-superextra text-skin-base1 font-thin">WE DESIGN FOR TECHNOLOGY</h1>
@@ -36,8 +40,8 @@
             <div class="lpcRight w-1/2 pl-16 pt-48">
                 <img src="./assets/images/logo_2.png" alt="" class="h-24">
                 <h1 class="text-7xl tracking-widest text-white uppercase font-extrabold mt-10">We Create digital arts.</h1>
-                <p class="my-8 text-white font-semibold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas ab ex eaque et illo, voluptatem hic eius nostrum quae, excepturi saepe quisquam commodi.</p>
-                <a href="#" class="btn text-white hover:font-bold">SEE MORE</a>
+                <p class="mt-2 text-white font-thin">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas ab ex eaque et illo, voluptatem hic eius nostrum quae, excepturi saepe quisquam commodi.</p>
+                <div class="mt-10"><a href="#" class="btn text-white hover:font-bold">SEE MORE</a></div>
             </div>
         </div>
     </div>
