team page start

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="./assets/images/title_Logo.png">
     <meta name="description" content="APEX is the esteemed design society of TIPS, Dwarka, dedicated to elevating the field of design to new heights. With a large and active membership, we have conducted numerous workshops to enhance our skills. Our members utilize a variety of Adobe design software, including Photoshop, Illustrator, and InDesign, to create innovative and impactful designs.">
     <meta name="keywords" content="APEX, designing, designers, editing">
+    <script src="https://kit.fontawesome.com/e64b4eb724.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/output.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -22,7 +23,7 @@
         <h1 class="-rotate-90 whitespace-nowrap tracking-superextra text-skin-base1 font-thin">WE DESIGN FOR TECHNOLOGY</h1>
     </div>
     <div class="landingPage w-full h-screen bg-cover px-24">
-        <div class="navbar w-full h-15v flexCenter fixed left-0 px-24">
+        <div class="navbar w-full h-15v flexCenter fixed z-50 left-0 px-24">
             <div class="logo w-30p h-full flexCenter">
                 <img src="./assets/images/logo_1.png" alt="Apex_Logo Image" class="h-12">
             </div>
@@ -37,12 +38,21 @@
             <div class="lpcLeft w-1/2 flexCenter justify-center">
                 <img src="./assets/images/camera.png" alt="" class="w-full rounded-circle">
             </div>
-            <div class="lpcRight w-1/2 pl-16 pt-48">
+            <div class="lpcRight w-1/2 pl-4 relative z-10 pt-48">
                 <img src="./assets/images/logo_2.png" alt="" class="h-24">
-                <h1 class="text-7xl tracking-widest text-white uppercase font-extrabold mt-10">We Create digital arts.</h1>
-                <p class="mt-2 text-white font-thin">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas ab ex eaque et illo, voluptatem hic eius nostrum quae, excepturi saepe quisquam commodi.</p>
+                <h1 class="tracking-widest text-white uppercase font-extrabold mt-10">We Create digital arts.</h1>
+                <p class="mt-2 text-white font-thin w-4/5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas ab ex eaque et illo, voluptatem hic eius nostrum quae, excepturi saepe quisquam commodi.</p>
                 <div class="mt-10"><a href="#" class="btn text-white hover:font-bold">SEE MORE</a></div>
             </div>
+        </div>
+    </div>
+    <div class="teamPage w-full h-screen">
+        <div class="teamPageLeft">
+            <h1>THE TEAM</h1>
+            <i class="fa-solid fa-circle-chevron-right"></i>
+        </div>
+        <div class="teamPageRight">
+
         </div>
     </div>
 </body>
