team page start4

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="lpcRight w-1/2 pl-4 relative z-10 pt-48">
                 <img src="./assets/images/logo_2.png" alt="" class="h-24">
                 <h1 class="tracking-widest text-white uppercase font-extrabold mt-10">We Create digital arts.</h1>
-                <p class="mt-2 text-white font-thin w-4/5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas ab ex eaque et illo, voluptatem hic eius nostrum quae, excepturi saepe quisquam commodi.</p>
+                <p class="mt-2 text-white font-extralight w-4/5">Welcome to Apex - The Premier Designing Society of Trinity Institute of Professional Studies, Dwarka!</p>
                 <div class="mt-10"><a href="#" class="btn text-white hover:font-bold">SEE MORE</a></div>
             </div>
         </div>
@@ -123,6 +123,37 @@
                 <div class="swiper-pagination"></div>
               </div>
         </div>
+    </div>
+    <div class="socialCards w-full h-screen px-24 relative">
+      <div class="techStrip absolute top-0 left-0 h-full w-5p flexCenter justify-center">
+        <h1 class="-rotate-90 whitespace-nowrap tracking-superextra text-skin-base1 font-thin">WE DESIGN FOR TECHNOLOGY</h1>
+      </div>
+      <div class="cards w-full h-full flexCenter justify-evenly">
+        <div class="insta h-96 w-72 bg-skin-base1 rounded-3xl">
+          <img src="" alt="">
+          <h1>APEX</h1>
+          <p>Premier Designing Society</p>
+          <div class="stats">
+            <p>
+              <span>342</span>
+              <span>Posts</span>
+            </p>
+            <p>
+              <span>120k</span>
+              <span>Followers</span>
+            </p>
+            <p>
+              <span>285</span>
+              <span>Following</span>
+            </p>
+          </div>
+          <div class="button">
+            <a href="#">Follow</a>
+            <a href="#">Message</a>
+          </div>
+        </div>
+        <div class="pinterest"></div>
+      </div>
     </div>
 
     <script src="./js/swiper-bundle.min.js"></script>
