--- a/index.html
+++ b/index.html
@@ -131,9 +131,10 @@
       <div class="cards w-full h-full flexCenter justify-evenly">
         <div class="insta h-96 w-72 bg-skin-base1 rounded-3xl relative flexCenter flex-col">
           <img src="./assets/images/logo_3.jpg" alt="" class="img w-28 absolute -top-12 rounded-full">
+          <div class="backdropCircle w-28 h-28 absolute -top-12 rounded-full -z-[1]"></div>
           <h1 class="mt-20 font-bold text-xl">APEX</h1>
-          <p class="text-sm my-1">We design for Technology</p>
-          <p class="text-sm">Designing society of <span class="text-[#304C83]">@trinitydwarka</span></p>
+          <p class="text-sm my-1 text-gray-600 font-medium">We design for Technology</p>
+          <p class="text-sm">Designing society of <a href="https://www.instagram.com/trinitydwarka/" class="text-skin-base2">@trinitydwarka</a></p>
           <div class="highlight flexCenter justify-evenly w-full mt-4">
             <img src="./assets/images/highlight_3.jpg" alt="" class="w-14 rounded-full">
             <img src="./assets/images/highlight_2.jpg" alt="" class="w-14 rounded-full">
@@ -143,15 +144,15 @@
           <div class="stats flexCenter justify-evenly w-full mt-4">
             <p class="flexCenter flex-col text-center w-full">
               <span>342</span>
-              <span class="text-sm">Posts</span>
+              <span class="text-sm text-gray-600 font-medium">Posts</span>
             </p>
             <p class="flexCenter flex-col text-center w-full">
               <span>120k</span>
-              <span class="text-sm">Followers</span>
+              <span class="text-sm text-gray-600 font-medium">Followers</span>
             </p>
             <p class="flexCenter flex-col text-center w-full">
               <span>285</span>
-              <span class="text-sm">Following</span>
+              <span class="text-sm text-gray-600 font-medium">Following</span>
             </p>
           </div>
           <div class="button w-full flexCenter justify-evenly">
@@ -161,19 +162,20 @@
         </div>
         <div class="linkedin h-96 w-72 bg-skin-base1 rounded-3xl relative flexCenter flex-col">
           <img src="./assets/images/logo_4.png" alt="" class="img w-28 absolute -top-12 rounded-full">
+          <div class="backdropCircle w-28 h-28 absolute -top-12 rounded-full -z-[1]"></div>
           <h1 class="mt-20 font-bold text-xl">APEX</h1>
           <p class="text-sm my-0.5">Designing Society of TIPS</p>
           <ul class="w-full flexCenter justify-evenly mt-0.5">
-            <li class="text-xs">Design Services</li>
-            <li class="text-xs">6 Followers</li>
-            <li class="text-xs">51-200 Employees</li>
+            <li class="text-xs text-gray-600 font-medium">Design Services</li>
+            <li class="text-xs text-gray-600 font-medium">6 Followers</li>
+            <li class="text-xs text-gray-600 font-medium">51-200 Employees</li>
           </ul>
           <div class="w-full px-2 mt-2">
-            <h5 class="text-sm mb-0.5 font-medium">About</h5>
-            <p class="text-xs text-justify">Welcome to Apex - The Premier Designing Society of Trinity Institute of Professional Studies, Dwarka! 🚀 <a href="#" class="text-[#304C83]">show more</a></p>
+            <h5 class="text-sm mb-0.5 font-semibold">About</h5>
+            <p class="text-xs text-justify">Welcome to Apex - The Premier Designing Society of Trinity Institute of Professional Studies, Dwarka! 🚀 <a href="https://www.linkedin.com/company/apex-designing-society-of-tips/" class="text-skin-base2">Show more...</a></p>
           </div>
           <div class="connections w-full px-2 mt-1">
-            <h4 class="text-sm mb-0.5 font-medium">Mutual Connections</h4>
+            <h4 class="text-sm mb-0.5 font-semibold">Mutual Connections</h4>
             <div class="flexCenter gap-2 mt-1">
               <img src="./assets/images/per3.jpeg" alt="" class="rounded-full w-10">
               <img src="./assets/images/per4.jpeg" alt="" class="rounded-full w-10">
@@ -184,8 +186,8 @@
             </div>
           </div>
           <div class="button w-full flexCenter justify-evenly">
-            <a href="https://www.instagram.com/design.apex/" class="linkedin text-white bg-[#0072b1] w-24 py-1 rounded-md text-center mt-6" target="_blank">Follow</a>
-            <a href="https://www.instagram.com/design.apex/" class="bg-gray-400 w-24 py-1 rounded-md text-center mt-6 font-semibold" target="_blank">Message</a>
+            <a href="https://www.linkedin.com/company/apex-designing-society-of-tips/" class="text-white bg-skin-base2 w-24 py-1 rounded-md text-center mt-6" target="_blank">Follow</a>
+            <a href="https://www.linkedin.com/company/apex-designing-society-of-tips/" class="bg-gray-400 w-24 py-1 rounded-md text-center mt-6 font-semibold" target="_blank">Message</a>
           </div>
         </div>
       </div>
