--- a/index.html
+++ b/index.html
@@ -58,61 +58,61 @@
                   <div class="card-wrapper swiper-wrapper">
                     <div class="card swiper-slide">
                       <div class="image-box">
-                        <img src="https://images.pexels.com/photos/1043474/pexels-photo-1043474.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" />
+                        <img src="./assets/images/per3.jpeg" alt="" />
                       </div>
                       <div class="profile-details">
-                        <img src="https://images.pexels.com/photos/1043474/pexels-photo-1043474.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" />
+                        <img src="./assets/images/per3.jpeg" alt="" />
                         <div class="name-job">
                           <h3 class="name">Akshit Bhaiya</h3>
+                          <h4 class="job">3D Modelling</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card swiper-slide">
+                      <div class="image-box">
+                        <img src="./assets/images/per4.jpeg" alt="">
+                      </div>
+                      <div class="profile-details">
+                        <img src="./assets/images/per4.jpeg" alt="">
+                        <div class="name-job">
+                          <h3 class="name">Aman Bhaiya</h3>
+                          <h4 class="job">Designer</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card swiper-slide">
+                      <div class="image-box">
+                        <img src="./assets/images/per6.png" alt="">
+                      </div>
+                      <div class="profile-details">
+                        <img src="./assets/images/per6.png" alt="">
+                        <div class="name-job">
+                          <h3 class="name">Lovish Bhaiya</h3>
                           <h4 class="job">Full Stack Developer</h4>
                         </div>
                       </div>
                     </div>
                     <div class="card swiper-slide">
                       <div class="image-box">
-                        <img src="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
+                        <img src="./assets/images/per1.jpeg" alt="">
                       </div>
                       <div class="profile-details">
-                        <img src="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
-                        <div class="name-job">
-                          <h3 class="name">Aman Bhaiya</h3>
-                          <h4 class="job">Photographer</h4>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card swiper-slide">
-                      <div class="image-box">
-                        <img src="https://images.pexels.com/photos/1516680/pexels-photo-1516680.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
-                      </div>
-                      <div class="profile-details">
-                        <img src="https://images.pexels.com/photos/1516680/pexels-photo-1516680.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
-                        <div class="name-job">
-                          <h3 class="name">Lovish Bhaiya</h3>
-                          <h4 class="job">Data Analyst</h4>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card swiper-slide">
-                      <div class="image-box">
-                        <img src="https://images.pexels.com/photos/775358/pexels-photo-775358.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
-                      </div>
-                      <div class="profile-details">
-                        <img src="https://images.pexels.com/photos/775358/pexels-photo-775358.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
+                        <img src="./assets/images/per1.jpeg" alt="">
                         <div class="name-job">
                           <h3 class="name">Dhruv Pal</h3>
-                          <h4 class="job">App Developer</h4>
+                          <h4 class="job">Full Stack Developer</h4>
                         </div>
                       </div>
                     </div>
                     <div class="card swiper-slide">
                       <div class="image-box">
-                        <img src="https://images.pexels.com/photos/1270076/pexels-photo-1270076.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
+                        <img src="./assets/images/per2.jpeg" alt="">
                       </div>
                       <div class="profile-details">
-                        <img src="https://images.pexels.com/photos/1270076/pexels-photo-1270076.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
+                        <img src="./assets/images/per2.jpeg" alt="">
                         <div class="name-job">
-                          <h3 class="name">Somone</h3>
-                          <h4 class="job">Blogger</h4>
+                          <h3 class="name">Jatin</h3>
+                          <h4 class="job">Photographer</h4>
                         </div>
                       </div>
                     </div>
@@ -182,7 +182,7 @@
               <img src="./assets/images/per1.jpeg" alt="" class="rounded-full w-10">
               <img src="./assets/images/per2.jpeg" alt="" class="rounded-full w-10">
               <img src="./assets/images/per5.png" alt="" class="rounded-full w-10">
-              <p class="-ml-5 text-gray-400">+34</p>
+              <p class="-ml-5 text-gray-600">+34</p>
             </div>
           </div>
           <div class="button w-full flexCenter justify-evenly">
